# gz-bazel

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  LICENSE  README.md  WORKSPACE  bazel.rc  build_defs.bzl  cmake_configure_file.bzl  cmake_configure_file.py  embed_sdf.py  generate_export_header.bzl  generate_file.bzl  generate_include_header.bzl  generate_yaml.bzl  ign_config_header.bzl  ign_export_header.bzl  pathutils.bzl  qt.BUILD  qt.bzl  repositories.bzl  ubuntu-jammy.bazelrc
.github/ci/: bazel.repos  packages-jammy.apt  packages.apt
.github/ci-bionic/: packages.apt
.github/workflows/: ci.yml
cc_toolchain/: BUILD.bazel
dynamic_analysis/: BUILD.bazel  bazel.rc
example/: 0001-Add-ign-utils.patch  BUILD.bazel.example  BUILD.example  Dockerfile  README.md  WORKSPACE.example  bazel.repos  bazelproject.example  bazelrc.example  build_workspace.sh  setup_workspace.sh
lint/: BUILD.bazel  bazel_lint.bzl  buildifier-tables.json  buildifier.py  lint.bzl
ogre2/: BUILD.bazel
ogre2/Components/: BUILD.bazel
py_toolchain/: BUILD.bazel  interpreter_paths.bzl
skylark/: BUILD.bazel  build_defs.bzl  cmake_configure_file.bzl  cmake_configure_file.py  gz_configure_file.bzl  gz_configure_file.py  gz_export_header.bzl  gz_include_header.bzl  gz_py.bzl  protobuf.bzl  python_env.bzl
tools/: bazel.rc  workspace-status.bash
tools/lint/: BUILD.bazel  bazel_lint.bzl  buildifier.py  bzlcodestyle.py  find_data.py  lint.bzl  util.py
tools/skylark/: ignition_py.bzl
tools/workspace/: BUILD.bazel  build_defs.bzl  cmake_configure_file.bzl  cmake_configure_file.py  default.bzl  embed_sdf.py  execute.bzl  generate_file.bzl  github.bzl  metadata.bzl  mirrors.bzl  os.bzl  pathutils.bzl
tools/workspace/X/: package.BUILD.bazel  repository.bzl
tools/workspace/assimp/: package.BUILD.bazel  repository.bzl
tools/workspace/bazel_skylib/: repository.bzl
tools/workspace/boost/: package.BUILD.bazel  repository.bzl
tools/workspace/buildifier/: repository.bzl
tools/workspace/bullet/: package.BUILD.bazel  repository.bzl
tools/workspace/curl/: BUILD.bazel  package.BUILD.bazel  repository.bzl
tools/workspace/eigen/: package.BUILD.bazel  repository.bzl
tools/workspace/fcl/: package.BUILD.bazel  repository.bzl
tools/workspace/ffmpeg/: package.BUILD.bazel  repository.bzl
tools/workspace/freeimage/: package.BUILD.bazel  repository.bzl
tools/workspace/freetype/: package.BUILD.bazel  repository.bzl
tools/workspace/gl/: package.BUILD.bazel  repository.bzl
tools/workspace/glib/: package.BUILD.bazel  repository.bzl
tools/workspace/gtest/: package.BUILD.bazel  repository.bzl
tools/workspace/gts/: package.BUILD.bazel  repository.bzl
tools/workspace/jsoncpp/: package.BUILD.bazel  repository.bzl
tools/workspace/nlopt/: package.BUILD.bazel  repository.bzl
tools/workspace/ode/: package.BUILD.bazel  repository.bzl
tools/workspace/pycodestyle/: package.BUILD.bazel  repository.bzl
tools/workspace/rules_proto/: repository.bzl
tools/workspace/rules_python/: repository.bzl
tools/workspace/tinyxml2/: package.BUILD.bazel  repository.bzl
tools/workspace/uuid/: package.BUILD.bazel  repository.bzl
tools/workspace/yaml/: package.BUILD.bazel  repository.bzl
tools/workspace/zip/: package.BUILD.bazel  repository.bzl
tools/workspace/zmq/: package.BUILD.bazel  repository.bzl
workspace/: BUILD.bazel  cmake_configure_file.bzl  default.bzl  generate_file.bzl  github.bzl  mirrors.bzl  os.bzl  pkg_config.bzl  workspace-status.bash
workspace/X11/: package.BUILD.bazel  repository.bzl
workspace/assimp/: package.BUILD.bazel  repository.bzl
workspace/backward/: package.BUILD.bazel  repository.bzl
workspace/bazel_skylib/: repository.bzl
workspace/buildifier/: repository.bzl
workspace/ccd/: package.BUILD.bazel  repository.bzl
workspace/cli11/: package.BUILD.bazel  repository.bzl
workspace/console_bridge/: package.BUILD.bazel  repository.bzl
workspace/curl/: package.BUILD.bazel  repository.bzl
workspace/egl/: repository.bzl
workspace/eigen/: repository.bzl
workspace/eigen3/: package.BUILD.bazel  repository.bzl
workspace/fcl/: package.BUILD.bazel  repository.bzl
workspace/ffmpeg/: package.BUILD.bazel  repository.bzl
workspace/fmt/: package.BUILD.bazel  repository.bzl
workspace/freeimage/: package.BUILD.bazel  repository.bzl
workspace/freetype2/: package.BUILD.bazel  repository.bzl
workspace/gdal/: package.BUILD.bazel  repository.bzl
workspace/gl/: package.BUILD.bazel  repository.bzl
workspace/glfw/: package.BUILD.bazel  repository.bzl
workspace/glib/: package.BUILD.bazel  repository.bzl
workspace/glslang/: package.BUILD.bazel  repository.bzl
workspace/glut/: package.BUILD.bazel  repository.bzl
workspace/glx/: package.BUILD.bazel  repository.bzl
workspace/gtest/: package.BUILD.bazel  repository.bzl
workspace/gts/: package.BUILD.bazel  repository.bzl
workspace/json/: package.BUILD.bazel  repository.bzl
workspace/jsoncpp/: package.BUILD.bazel  repository.bzl
workspace/nlopt/: package.BUILD.bazel  repository.bzl
workspace/ode/: package.BUILD.bazel  repository.bzl
workspace/opengl/: repository.bzl
workspace/osg/: package.BUILD.bazel  repository.bzl
workspace/pycodestyle/: BUILD.bazel  package.BUILD.bazel  repository.bzl
workspace/rules_license/: repository.bzl
workspace/rules_proto/: repository.bzl
workspace/rules_python/: repository.bzl
workspace/rules_qt/: repository.bzl
workspace/rules_ruby/: repository.bzl
workspace/sdl2/: package.BUILD.bazel  repository.bzl
workspace/spdlog/: package.BUILD.bazel  repository.bzl
workspace/sqlite3/: package.BUILD.bazel  repository.bzl
workspace/tinyxml2/: package.BUILD.bazel  repository.bzl
workspace/urdfdom/: package.BUILD.bazel  repository.bzl
workspace/uuid/: package.BUILD.bazel  repository.bzl
workspace/vulkan/: package.BUILD.bazel  repository.bzl
workspace/x11/: package.BUILD.bazel  repository.bzl
workspace/xcb/: package.BUILD.bazel  repository.bzl
workspace/yaml/: package.BUILD.bazel  repository.bzl
workspace/zip/: package.BUILD.bazel  repository.bzl
(+16 files in other folders)
