cc_library(
    name = "hlms_pbs_inc",
    hdrs = glob(
        [
            "Hlms/Pbs/src/*.inc",
        ]
    ),
)

cc_library(
    name = "hlms_common",
    srcs = glob(
        [
            "Hlms/Common/src/*.cpp",
            "Hlms/Common/include/*.h",
        ]
    ),
    hdrs = glob(
        [
            "Hlms/Common/include/*.h"
        ]
    ),
    strip_include_prefix = "Hlms/Common/include",
    include_prefix = "Hlms/Common/",
    includes = [
        "Hlms/Common/include",
    ],
    deps = [
        "//ogre2:ogre_main"
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "hlms_pbs",
    srcs = glob(
        [
            "Hlms/Pbs/src/*.cpp",
            "Hlms/Pbs/src/Cubemaps/*.cpp",
            "Hlms/Pbs/src/InstantRadiosity/*.cpp",
            "Hlms/Pbs/include/*.h",
            "Hlms/Pbs/include/Cubemaps/*.h",
            "Hlms/Pbs/include/InstantRadiosity/*.h",
        ]
    ),
    hdrs = glob(
        [
            "Hlms/Pbs/include/*.h",
        ]
    ),
    strip_include_prefix = "Hlms/Pbs/include",
    include_prefix = "Hlms/Pbs",
    includes = [
        "Hlms/Pbs/include",
    ],
    deps = [
        "//ogre2:ogre_main",
        ":hlms_common",
        ":hlms_pbs_inc",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "hlms_pbs_mobile",
    srcs = glob(
        [
            "Hlms/PbsMobile/src/*.cpp",
        ]
    ),
    hdrs = glob(
        [
            "Hlms/PbsMobile/include/*.h",
        ]
    ),
    includes = [
        "Hlms/PbsMobile/include",
        ],
    deps = [
        "//ogre2:ogre_main",
        ":hlms_common",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "hlms_unlit_inc",
    hdrs = glob(
        [
            "Hlms/Unlit/src/*.inc",
        ]
    ),
)

cc_library(
    name = "hlms_unlit",
    srcs = glob(
        [
            "Hlms/Unlit/src/*.cpp",
            "Hlms/Unlit/include/*.h",
        ]
    ),
    hdrs = glob(
        [
            "Hlms/Unlit/include/*.h",
        ]
    ),
    strip_include_prefix = "Hlms/Unlit/include",
    include_prefix = "Hlms/Unlit",
    includes = [
        "Hlms/Unlit/include",
        ],
    deps = [
        "//ogre2:ogre_main",
        ":hlms_common",
        ":hlms_unlit_inc",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "hlms_unlit_mobile",
    srcs = glob(
        [
            "Hlms/UnlitMobile/src/*.cpp",
        ]
    ),
    hdrs = glob(
        [
            "Hlms/UnlitMobile/include/*.h",
        ]
    ),
    includes = [
        "Hlms/UnlitMobile/include",
    ],
    deps = [
        "//ogre2:ogre_main",
        ":hlms_common",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "overlay",
    srcs = glob(
        [
            "Overlay/src/*.cpp",
            "Overlay/include/*.h",
        ]
    ),
    hdrs = glob(
        [
            "Overlay/include/*.h",
        ]
    ),
    strip_include_prefix = "Overlay/include",
    include_prefix = "Overlay",
    includes = [
        "Overlay/include",
    ],
    copts = [
        "-Iexternal/freetype2"
    ],
    deps = [
        "//ogre2:ogre_main",
        ":hlms_unlit",
        # TODO (john): enable below for Google3, and delete all other existing
        # freetype2 logic in this project (WORKSPACE and here)
        #"//third_party/freetype2:freetype_latest",
        "@freetype2//:headers",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)
