# -*- python -*-

load(":vars.bzl", "LIBDIR")

cc_library(
    name = "fcl",
    hdrs = glob([
      "include/fcl/*.h",
      "include/fcl/*.hpp",
    ]),
    includes = ["include"],
    linkopts = [
        "-L" + LIBDIR,
        "-Wl,-rpath," + LIBDIR,
        "-lfcl",
    ],
    visibility = ["//visibility:public"],
)
